--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,24 @@
+html, body{
+  width: 100%;
+  background-color: black;
+  height: 100vh;
+}
+
 .App{
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
+  background-color: black;
 }
 
-h1, h2, h3, h4, h5, p, div{
-  color: white;
+.element {
+  border-radius: 10px; /* 원하는 값으로 조정 가능 */
+  background-color: #f0f0f0; /* 원하는 값으로 조정 가능 */
+  padding: 20px; /* 원하는 값으로 조정 가능 */
 }
 
-.font-hover:hover{
-  color:black;
+.radius {
+  
+  background-color: #242424;
+  padding: 12px;
 }
