--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,24 +1,28 @@
-html, body{
+html,
+body {
   width: 100%;
   background-color: black;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
-.App{
+.App {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   background-color: black;
 }
 
 .element {
-  border-radius: 10px; /* 원하는 값으로 조정 가능 */
-  background-color: #f0f0f0; /* 원하는 값으로 조정 가능 */
-  padding: 20px; /* 원하는 값으로 조정 가능 */
+  border-radius: 10px;
+  /* 원하는 값으로 조정 가능 */
+  background-color: #f0f0f0;
+  /* 원하는 값으로 조정 가능 */
+  padding: 20px;
+  /* 원하는 값으로 조정 가능 */
 }
 
 .radius {
-  
+
   background-color: #242424;
   padding: 12px;
 }
