--- a/frontend/src/css/MusicList.css
+++ b/frontend/src/css/MusicList.css
@@ -5,7 +5,7 @@
 
 .music-item {
   background-color: #181818;
-  margin-left: 15px;
+  margin-right: 25px;
   margin-bottom: 30px;
   width: 240px;
   height: 350px;
