--- a/frontend/src/css/sidebar.css
+++ b/frontend/src/css/sidebar.css
@@ -1,77 +1,69 @@
-.font_gray:hover{
-
-}
+.font_gray:hover {}
 
 .sidebar {
-  position: fixed;
+  /* position: fixed;
   width: 20%;
   min-width: 150px;
-  height: 80%;
-  margin: 7px;
+  
+  z-index: 99999; */
+  position: sticky;
+  top: 0;
+  padding: 7px;
+  height: 100%;
+  min-width: 25%;
 }
 
-.sidebar p{
+.sidebar p {
   font-weight: 700;
 }
 
-.sidebar_1, .sidebar_2{
+.sidebar_1,
+.sidebar_2 {
   border-radius: 8px;
   background-color: #121212;
-  padding:4px 12px;
+  padding: 4px 12px;
 }
 
-.sidebar_1{
+.sidebar_1 {
   margin-bottom: 8px;
 }
 
-.sidebar_2{
+.sidebar_2 {
   height: 75%;
 }
 
-.sidebar_p{
+.sidebar_p {
   height: 40px;
 }
 
-.logo{
+.logo {
   margin-top: 20px;
 }
 
-.back_sidebar{
-  width: 26%;
-  min-width: 150px;
-  height: 100%;
-  background-color: black;
-  margin:7px;
-}
-
-.sideMenu{
-  width:100%;
+.sideMenu {
+  width: 100%;
   background-color: #242424;
   margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
-  border-radius: 8px; /* 원하는 값으로 조정 가능 */
-  padding:12px;
+  border-radius: 8px;
+  /* 원하는 값으로 조정 가능 */
+  padding: 12px;
   margin-top: 20px;
 }
 
-.sideMenu p{
+.sideMenu p {
   padding-bottom: 10px;
 }
 
 /* 슬라이드 쇼*/
-
-.slideshow {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 400px;
-  position: relative;
+.slideshow-container {
+  width: 70%;
 }
 
 .slide {
-  max-width: 100%;
-  max-height: 100%;
+  /* max-width: 100%;
+  max-height: 100%; */
 }
 
 .prev-button,
@@ -94,10 +86,15 @@
 }
 
 @keyframes slowBounce2 {
-  0%, 20%, 50%, 80%, 100% {
+
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
     transform: translateY(0);
   }
-  
+
   60% {
     transform: translateY(-5px);
   }
@@ -107,3 +104,10 @@
   animation: slowBounce2 5s linear infinite;
 }
 
+.sidebar_1 p{
+  padding-left: 13px;
+}
+
+.sidebar_1 h2{
+  padding-left: 13px;
+}
