--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,27 +2,34 @@ html,
 body {
   width: 100%;
   background-color: black;
-  /* height: 100vh; */
 }
 
 .App {
   width: 100%;
-  /* height: 100vh; */
+  height: 100vh;
   display: flex;
   background-color: black;
+  overflow: auto;
 }
 
-.element {
-  border-radius: 10px;
-  /* 원하는 값으로 조정 가능 */
-  background-color: #f0f0f0;
-  /* 원하는 값으로 조정 가능 */
-  padding: 20px;
-  /* 원하는 값으로 조정 가능 */
-}
 
 .radius {
-
   background-color: #242424;
   padding: 12px;
+}
+
+::-webkit-scrollbar {
+  width: 10px; /* 스크롤바의 너비 */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* 트랙의 색상 */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* 핸들의 색상 */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* 핸들의 hover 색상 */
 }
