--- a/frontend/src/css/Main.css
+++ b/frontend/src/css/Main.css
@@ -1,13 +1,13 @@
 .main-container{
     width: 75%;
+    margin-right:10px;
 }
 
 .istyle{
-  border-radius: 8px; /* 원하는 값으로 조정 가능 */
-  background-color: #121212; /* 원하는 값으로 조정 가능 */
+  border-radius: 8px;
+  background-color: #121212;
   margin-top:7px;
-  /* margin-right:7px; */
-  /* margin-left:20px; */
-  padding-top: 20px;
+  margin-right:10px;
+  /* padding-top: 15px; */
 }
 
