--- a/frontend/src/css/test.css
+++ b/frontend/src/css/test.css
@@ -1,23 +1,41 @@
 .music-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.carousel {
+    margin-left: 20px;
 }
 
 .song {
-    background-color: #f8f8f8;
-    border-radius: 10px;    
+    width: 90%;
+    max-width: 200px;
+    background-color: #181818;
+    border-radius: 8px;
     padding: 20px;
+    /* background-size: cover; */
+    transition: background-color 0.2s ease;
+    cursor: pointer;
+}
+
+.song:hover {
+    background-color: #242424;
 }
 
 .song img {
-   width:100%;
-   height:auto; 
-   object-fit:cover; 
-   border-radius:10px; 
+    width: 100%;
+    object-fit: cover;
+    border-radius: 3px;
 }
 
-.song h3,
-.song p {
-   margin-top :10px; 
+@media (min-width: 870px) {
+    .song {
+        height: 260px;
+    }
+}
+
+@media (max-width: 870px) {
+    .song {
+        height: 100%;
+        min-height: 170px;
+    }
 }
