Add - swr lib, skeleionUI

--- a/frontend/src/css/test.css
+++ b/frontend/src/css/test.css
@@ -17,6 +17,17 @@
     cursor: pointer;
 }
 
+.sk-song {
+    max-width: 200px;
+    width: 100%;
+    background-color: #181818;
+    border-radius: 8px;
+    padding: 20px;
+    /* background-size: cover; */
+    transition: background-color 0.2s ease;
+    cursor: pointer;
+}
+
 .song:hover {
     background-color: #242424;
 }
@@ -39,3 +50,29 @@
         min-height: 170px;
     }
 }
+
+.musicItem .playIcon {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 0.5s ease;
+    position: absolute;
+    top: 40%;
+    left: 58%;
+  }
+  
+  .musicItem:hover .playIcon {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+  
+  .musicItem:hover{
+    background-color: #363636;
+    transition: background-color 0.25s ease;
+    cursor: pointer;
+  }
+  
+  .hover:hover{
+    text-decoration: underline;
+  }
+  
+
